Restructured the whole project

--- a/core.gradle
+++ b/core.gradle
@@ -3,4 +3,9 @@ apply plugin: "java"
 sourceCompatibility = 1.8
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
+dependencies {
+    compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+}
+
 sourceSets.main.java.srcDirs = [ "src/" ]
