--- a/desktop.gradle
+++ b/desktop.gradle
@@ -3,8 +3,16 @@ apply plugin: "java"
 sourceCompatibility = 1.8
 sourceSets.main.java.srcDirs = [ "src/" ]
 
-project.ext.mainClassName = "de.fragstyle.spacehunters.desktop.DesktopLauncher"
-project.ext.assetsDir = new File("../core/assets");
+apply plugin: "java"
+
+dependencies {
+    compile project(":${project.parent.name}:core")
+    compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+    compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+}
+
+project.ext.assetsDir = new File("../core/assets")
 
 task run(dependsOn: classes, type: JavaExec) {
     main = project.mainClassName
