--- a/core.gradle
+++ b/core.gradle
@@ -4,8 +4,7 @@ sourceCompatibility = 1.8
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 dependencies {
+    compile project(":common")
     compile "com.badlogicgames.gdx:gdx:$gdxVersion"
     compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
 }
-
-sourceSets.main.java.srcDirs = [ "src/" ]
