--- a/desktop.gradle
+++ b/desktop.gradle
@@ -1,18 +1,18 @@
 apply plugin: "java"
 
 sourceCompatibility = 1.8
-sourceSets.main.java.srcDirs = [ "src/" ]
 
 apply plugin: "java"
 
 dependencies {
     compile project(":${project.parent.name}:core")
+    compile project(":common")
     compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
     compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
     compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
 }
 
-project.ext.assetsDir = new File("../core/assets")
+project.ext.assetsDir = rootProject.projectDir.toPath().resolve("common/assets").toFile()
 
 task run(dependsOn: classes, type: JavaExec) {
     main = project.mainClassName
